# doczillaTest

./: .gitignore  README.md  server  task-1  task-1.cpp
task1-2/: File1-1.txt  File1-2.txt
task1/Folder1/: File1-1.txt
task1/Folder2/: File2-2.txt
task2/client/: index.html  index.js  style.css
task2/server/: CMakeLists.txt  server  server.cpp  server.db
task2/server/core/: controller.cpp  controller.hpp  database.cpp  database.hpp
task3/: index.html  index.js  package.json  proxy-server.js  style.css
